# Stellaroid-2026

./: .gitignore  README.md  netlify.toml  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
backend/: .env.example  package-lock.json  package.json
backend/src/: app.js  load-env.js  server.js
backend/src/middleware/: errorHandler.js  requestLog.js
backend/src/routes/: certificates.js  payments.js  rewards.js  wallet.js
backend/src/services/: soroban.js
backend/src/util/: log.js
backend/test/: app.test.js  env-setup.js
client/: index.html  package-lock.json  package.json
client/src/: main.jsx
client/src/hooks/: useWallet.js
client/src/pages/: EmployerPage.jsx  LandingPage.jsx  VerifyPage.jsx
client/src/services/: api.js
contract/: Cargo.toml  rust-toolchain.toml
contract/payment_registry/: Cargo.toml
contract/payment_registry/src/: lib.rs  test.rs
contract/payment_registry/test_snapshots/test/tests/: get_stats_starts_at_zero.1.json  log_payment_updates_stats.1.json
contract/src/: test.rs
contract/stellaroid_earn/: Cargo.toml
contract/stellaroid_earn/src/: lib.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/public/: _redirects
frontend/src/: App.jsx  main.jsx
frontend/src/components/: BeltBadge.jsx  WalletBar.jsx
frontend/src/config/: stellar.js
frontend/src/hooks/: useWallet.js
frontend/src/pages/: IssuerPage.jsx  LandingPage.jsx  StudentPage.jsx
frontend/src/services/: api.js  utils.js
scripts/: smoke-api.mjs  trigger-reward.mjs
src/: lib.rs
