# Cargo workspace: all Soroban contracts live under `contract/`.
[workspace]
members = ["stellaroid_earn", "payment_registry"]
resolver = "2"

# Shared Wasm release profile (Soroban on-chain size limits).
[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
debug-assertions = false
lto = true
panic = "abort"
codegen-units = 1
strip = "symbols"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
