[package]
name = "payment_registry"
version = "0.1.0"
edition = "2021"
description = "On-chain payment log and statistics for Stellaroid Earn (Soroban)."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.0.0" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
